<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/border"
              android:padding="20dp"
              android:layout_gravity="top"
              android:orientation="vertical">
    <TextView
            android:id="@+id/txtclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="x"
            android:textStyle="bold"
            android:layout_gravity="right"
    />


        <TextView
                android:id="@+id/suppression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:fontFamily="@font/openregular"
                android:text="@string/suppressionMessage"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/txtclose"
                android:textStyle="bold"/>

<LinearLayout android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="horizontal">

    <Button
            android:id="@+id/confirmDelete"
            android:text="@string/supprimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/suppression"
            android:fontFamily="@font/openregular"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:textAllCaps="true"
            android:layout_gravity="center"
            tools:ignore="MissingConstraints"
            />
            <Button
                    android:id="@+id/cancelDelete"
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/openregular"
                    android:backgroundTint="@color/orange"
                    app:layout_constraintTop_toBottomOf="@+id/suppression"
                    android:layout_marginLeft="5sp"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="true"/>
</LinearLayout>
</LinearLayout>
