<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AddCategorieActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/barLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="30dp">

    <TextView
            android:text="@string/editAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            />

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_category_24"
            android:layout_marginBottom="50dp"
            android:id="@+id/cat_imageView"/>
    <TextView
            android:text="@string/nomDeCategorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/textView"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:boxBackgroundColor="@color/white_greyish"
    >

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_txt_cat_nom"
                android:hint="@string/nom_categorie"
                android:paddingStart="9dp"
                android:paddingLeft="9dp"
                android:inputType="text"

        />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <Button
                android:id="@+id/saveBtn"
                android:padding="10dp"
                android:enabled="false"
                android:text="Enregistrer"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
        />

        <Button
                android:id="@+id/cancelBtn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:backgroundTint="@color/orange"
                android:text="Annuler"
        />
    </LinearLayout>
</LinearLayout>
</RelativeLayout>
</ScrollView>